# context-engineering-arena

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  arena_cli  index.html  sitecustomize.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  propose-task.yml  submit-strategy.yml
.github/workflows/: deploy-pages.yml  validate.yml
arena/: README.md  pyproject.toml
arena/arena_cli/: build_catalog.py  cli.py  data.py  init.py  schemas.py  score.py  utils.py  validate.py
assets/: index-CXH9O_se.css  index-DCAm39-E.js
data/: README.md
docs/: arena-philosophy.md  data-policy.md  ethics-and-safety.md  local-development.md  scoring-guide.md  submission-guide.md  task-authoring-guide.md
schemas/: answer.schema.json  context_trace.schema.json  data_manifest.schema.json  score.schema.json  submission.schema.json  task.schema.json
scripts/: bootstrap.sh  build_catalog.py  generate_sample_submission.py  validate_all.py
submissions/: README.md
submissions/baseline-hybrid-rag/: participant.yaml
submissions/baseline-prompt-only/: participant.yaml
tasks/proposals/: README.md
tasks/task-001-enron-investigation/: README.md  data_manifest.yaml  expected_answer_schema.json  rubric.md  task.yaml
tasks/task-002-brazil-public-money-trail/: README.md  data_manifest.yaml  expected_answer_schema.json  rubric.md  task.yaml
tasks/task-002-sec-risk-radar/: README.md  data_manifest.yaml  expected_answer_schema.json  rubric.md  task.yaml
tasks/task-003-open-source-ecosystem-radar/: README.md  data_manifest.yaml  rubric.md  (+2 more)
(+45 files in other folders)
