[project]
name = "context-engineering-arena"
version = "0.1.0"
description = "Validation and catalog tooling for Context Engineering Arena"
requires-python = ">=3.10"
dependencies = ["pydantic>=2.6", "PyYAML>=6", "requests>=2.31"]

[project.scripts]
arena = "arena_cli.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
